fix(style): adjust copyright font and font weight and opacity to improve legibility

--- a/skyapp-frontend/src/App.css
+++ b/skyapp-frontend/src/App.css
@@ -406,11 +406,11 @@ img[src*="marker"], .leaflet-marker-icon, .mapboxgl-marker {
 
 .copyright {
   font-size: 1.2rem;
-  opacity: 0.6;
+  opacity: 0.88;
   margin-top: 40px;
   color: var(--text-sub);
-  font-weight: 400;
-  font-family:'Share Tech Mono', monospace;
+  font-weight: 600;
+  font-family:'Courier New', monospace !important;
 }
 
 
